# CPU-GPU-Performance-Analysis

./: .gitignore  CMakeLists.txt  README.md
include/backend/: GPUBackend.h
include/gui/: CpuPanel.h  GpuPanel.h  MainWindow.h
src/backend/: AmdBackend.cpp  IntelBackend.cpp
src/gui/: CpuPanel.cpp  MainWindow.cpp
